services/proxy/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aegis-auth-proxy
  namespace: default
  labels:
    app: aegis-auth-proxy
spec:
  type: ClusterIP
  selector:
    app: aegis-auth-proxy
  ports:
    - name: https-proxy
      port: 8080
      protocol: TCP
      targetPort: 8080
